[package]
name = "bevy_rsvp_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.15"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
bevy_egui = "0.31"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# REPLACE oxidize-pdf WITH THIS:
lopdf = "0.32"

